# Django_drf_news

./: .gitignore  Readme.md  package-lock.json  pyproject.toml
apps/accounts/: serializers.py
apps/accounts/migrations/: 0001_initial.py
apps/comments/: models.py  permissions.py  views.py
apps/main/: models.py  permissions.py  serializers.py  views.py
apps/main/migrations/: 0001_initial.py
apps/payment/: admin.py  serializers.py  services.py  signals.py  views.py
apps/payment/migrations/: 0001_initial.py
apps/subscribe/: admin.py  serializers.py  signals.py  tasks.py  views.py
apps/subscribe/management/commands/: fix_stripe_integration.py
apps/subscribe/migrations/: 0001_initial.py
backend/: docker-compose.yml  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/comments/: serializers.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/main/: admin.py  models.py  serializers.py  views.py
backend/apps/payment/: models.py  tasks.py  views.py
backend/apps/subscribe/: models.py  serializers.py  views.py
backend/apps/subscribe/management/commands/: create_subscription_product.py
backend/config/: celery.py  settings.py  urls.py
config/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/stores/: auth.js
frontend/src/views/auth/: ChangePasswordView.vue  RegisterView.vue
